Corrected modal z-index and size

--- a/reactjs/src/css/menu_style.module.css
+++ b/reactjs/src/css/menu_style.module.css
@@ -117,7 +117,7 @@
 
 .modal{
     display:none;
-    z-index: 9999;
+    z-index: 999999;
     color:black;
     background-color: white;
     position:fixed;
@@ -174,7 +174,7 @@
     }
 
     .modal{
-        width: 90%;
+        width: 80%;
     }
 
     
